# HousingCalifornia

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
notebook/: EDA.ipynb
src/: config.py  explore.py  main.py  trend.py
